apps/example-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: example-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: example-frontend
    spec:
      containers:
        - name: example-frontend
          image: localhost:5001/example-frontend:0.7.2
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
