apps/example-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-frontend
spec:
  selector:
    app.kubernetes.io/name: example-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
